--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -1475,7 +1475,7 @@ h1 {
 }
 .form-row .label.big + .input {
     width: 100%;
-    text-align: center;
+    text-align: left;
 }
 .form-row .input-short {
     width: 220px !important;
@@ -1616,12 +1616,14 @@ input[type="tel"] {
 .main-programs__block {
     font-size: 13px;
 }
-.bg3 {
-    background: #f9f9f9;
-    width: 50%;
-    position: absolute;
-    height: 1400px;
-}
+    .bg3 {
+        background: #f9f9f9;
+        width: 90%;
+        position: absolute;
+        height: 1400px;
+        float: right;
+    }
+
 .carousel {
     height: 310px;
 }
@@ -1950,7 +1952,7 @@ display: none;
 }
 .zakaz-text {
     margin-bottom: 29px;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 300;
     line-height: 1.5;
     color: #878787;
@@ -5350,14 +5352,14 @@ margin-bottom: 340px;
     .menu {
         padding-top: 6px;
         width: auto;
-        margin-left: 23px;
+        margin-left: 10px;
     }
     
     .headerAction {
     font-size: 10px;
     color: #252525;
     /*padding-top: 2px;*/
-    margin-left: 23px;
+    margin-left: 10px;
     margin-top: -6px;
 }
     .container {
@@ -6591,7 +6593,7 @@ margin-left: -10px;}
         }
     .zakaz-buttons * + * {
         margin-left: 0px;
-        margin-top:5px;
+        margin-top:15px;
     }
     .basket-item__image img {
         width: 60px;
@@ -7144,7 +7146,10 @@ display:none;
         background: url(../images/close_min.png) no-repeat 100% 0;
         height: 12px;
         width: 12px;
-        margin-top: 22px;
+        margin-top: 45px;
+        margin-left: -5px;
+        position: relative;
+        z-index: 1000;
     }
     button,
     input[type="button"],
@@ -7168,8 +7173,9 @@ display:none;
         padding-right: 5px;
     }
     .basket-item__value:nth-child(2) {
-        text-align: left;
-        margin-top: 10px;
+        text-align: right;
+        margin-top: 5px;
+        padding-right: 15px;
     }
     .basket-item__value:nth-child(3) {
         text-align: left;
@@ -7193,8 +7199,8 @@ display:none;
         font-size: 24px;
         color: #64b357;
         text-align: right;
-        margin-top: 20px;
-        margin-right: -20px;
+        margin-top: 3px;
+        margin-right: 0px;
     }
     .basket-item__value:nth-child(4) {
         font-family: DINPro, Arial, sans-serif;
@@ -7223,7 +7229,7 @@ display:none;
         font-stretch: normal;
         font-weight: normal;
         font-size: 24px;
-        line-height: 12px;
+        line-height: 24px;
         color: #64b357;
     }
 
@@ -7234,11 +7240,16 @@ display:none;
     .xs_padding_0 {
         padding: 0px;
     }
+        .xs_padding_right_0 {
+            padding-right: 0px;
+        }
+
     .xs_margin_0 {
         margin: 0px;
     }
     .cabinet-head__buttons .button-white + .button-white {
         margin-left: 10px;
+        width: 128px;
     }
     .cabinet-head__buttons .button-white {
         vertical-align: middle;
@@ -7316,6 +7327,7 @@ display:none;
 
         .panelMenu.in .bl_chose_days_c_bl {
             margin-bottom: 0px;
+
         }
         .bl_chose_days_c_bottom_price {
             padding: 0px 0px 6px 0px;
@@ -7570,15 +7582,200 @@ display:none;
 
     .kkal_1 {
         font-family: DINPro;
-        font-size: 12px;
-        font-weight: normal;
-        font-style: normal;
-        font-stretch: normal;
-        text-align: right;
-        color: #252525;
+        font-size: 12px !important;
+        font-weight: normal !important;
+        font-style: normal !important;
+        font-stretch: normal !important;
+        text-align: right !important;
+        color: #252525 !important;
     }
 
+    .basket-item__content {
+        border-bottom: 0;
 
+    }
+
+    .basket-item__value:nth-child(1) {
+        font-size: 12px;
+        line-height: 1.5;
+        font-family: DINPro, Arial, sans-serif;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        text-transform: uppercase;
+    }
+
+    .basket-item__image {
+        padding-left: 15px;
+        padding-top: 5px;
+    }
+
+    .padding_top_15 {
+        padding-top: 15px;
+    }
+
+    .basket-item__image {
+        height: auto;
+    }
+
+    .margin_top_8 {
+        margin-top: 8px !important;
+    }
+
+    .basket-item {
+        position: relative;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        margin-bottom: 13px;
+        margin-top: 13px;
+    }
+
+    .sum_box .col-xs-offset-2 {
+        margin-left: 11.5%;
+    }
+
+    .sum_box .basket-button {
+        margin-top: 30px;
+        float: right;
+        width: 220px;
+        height: 30px;
+    }
+
+    .sum_box {
+        margin-left: 15px;
+        margin-top: 45px;
+    }
+
+    .basket-total span{
+        font-family: DINPro;
+        font-size: 12px;
+        font-weight: bold !important;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.5;
+    }
+
+    .zakaz-buttons .button {
+        width: 185px;
+        height: 30px;
+    }
+
+    .zakaz-buttons {
+        text-align: center;
+    }
+
+    #js-popup-content {
+        padding-left: 30px;
+    }
+
+    .zakaz-login__head a {
+        float: left;
+    }
+
+    head__buttons .button-white.is-active {
+        border-color: #64b357;
+        width: 122px;
+    }
+
+    .bl_product_item_price {
+        height: 30px;
+        border: solid 1px #252525;
+        border-top: 0;
+        text-align: center;
+        line-height: 30px;
+        white-space: nowrap;
+        display: block;
+        font-family: DINPro;
+        font-size: 12px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        text-align: center;
+        color: #64b357;
+    }
+
+    .bl_product_item__buy {
+        border-top: none;
+        background-color: #64b357;
+        height: 30px;
+        line-height: 30px;
+        text-align: center;
+        color: #fff;
+        text-transform: uppercase;
+        font-family: DINPro;
+        font-size: 12px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        text-align: center;
+        color: #ffffff;
+        position: absolute;
+        bottom: 40px;
+        left: 15px;
+        right: 0;
+        width: 115px;
+        border-bottom: solid 1px #252525;
+        border-right: solid 1px #252525;
+        border-left: solid 1px #252525;
+    }
+    .bl_product_item_name a {
+        text-decoration: none;
+        top: 15px;
+        position: relative;
+    }
+    .zakaz-table td:first-child {
+        text-transform: uppercase;
+        width: 142px;
+    }
+    .zakaz-table td:nth-child(2) {
+        font-weight: normal;
+        padding: 5px;
+    }
+
+    .zakaz-comments {
+        margin-top: 50px;
+        /* bottom: 41px; */
+        /* position: relative; */
+    }
+    .zakaz-comments span {
+        float: right;
+        font-size: 12px;
+        line-height: 28px;
+        color: #878787;
+        line-height: 1.5;
+    }
+
+    textarea {
+        font-size: 12px;
+    }
+    .zakaz-total__sum {
+        float: right;
+        font-family: DINPro, Arial, sans-serif;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        font-weight: normal;
+        font-size: 24px;
+        color: #64b357;
+        line-height: 14px;
+    }
+    .zakaz-total h3 {
+        font-family: DINPro, Arial, sans-serif;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        display: inline-block;
+        font-size: 18px;
+        text-transform: uppercase;
+        color: #252525;
+    }
+    .zakaz-pay .button, .zakaz-pay .button-white {
+        float: right;
+        width: 184px;
+        margin-top: 30px;
+        margin-right: 12.5%;
+    }
 
 
 }
