--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -946,6 +946,12 @@ body {
     display: none !important;
 }
 @media (max-width: 766px) {
+
+.ui-effects-transfer {
+    height: auto;
+    width: 100%;
+}
+
     .img_card_1 {
         height: 350px;
         width: 240px;
@@ -1130,7 +1136,7 @@ body {
     top: 0px;
     margin-left: -45px;
     padding-left: 30px;
-    padding-top: 13%;
+    padding-top: 15%;
     background-color: rgba(255, 255, 255, 0.5);
     color-with: 100%;
     font-size: 37px;
@@ -1240,7 +1246,7 @@ h2 {
 .page-header__title {
 
     background-color: rgba(255, 255, 255, 0.5);
-    font-size: 37px;
+    font-size: 27px;
     line-height: 1;
 }
 .text-unit {
@@ -1251,7 +1257,7 @@ h2 {
 }
 .page-content__article {
     position: relative;
-    padding-top: 90px;
+    padding-top: 20px;
     margin-left: -30px;
     margin-right: -30px;
 }
@@ -1512,7 +1518,7 @@ input[type="tel"] {
     padding: 0;
     vertical-align: middle;
     width: 100%;
-    height: 18px;
+    height: 25px;
     font: inherit;
     font-size: 12px;
     line-height: 2;
@@ -2032,10 +2038,7 @@ display: none;
     background: linear-gradient(to bottom, transparent 32%, #252525 32%, #252525 47%, transparent 47%), linear-gradient(to right, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
 }
 .cross_tree_all {
-    float: right;
-    position: absolute;
-    top: 590px;
-    right: 0;
+    display: none;
 }
 .cross_tree_all_to {
     float: right;
@@ -2073,10 +2076,7 @@ display: none;
 }
 .popup.is-active .popup-container {
     left: 0px;
-    width: calc(50% + 115px);
-    width: -moz-calc(50% + 115px);
-    width: -webkit-calc(50% + 115px);
-    width: -webkit-calc(50% + 115px);
+    width: 100%;
 }
 .popup_style_1 {
     margin-left: -8px;
@@ -6550,6 +6550,40 @@ margin-left: -10px;}
 }
 
 @media (max-width: 766px) {
+    input[type="text"], input[type="password"], input[type="email"], input[type="search"], input[type="number"], input[type="tel"] {
+        border: none;
+        border-bottom: 1px solid #252525;
+        box-shadow: none;
+        border-radius: none;
+        outline: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        background-clip: padding-box;
+        background-color: transparent;
+        text-align: left;
+        box-sizing: border-box;
+        padding: 0;
+        vertical-align: middle;
+        width: 100%;
+        height: 20px;
+        font: inherit;
+        font-size: 15px;
+        line-height: 2;
+        color: #878787;
+    }
+    .form-row .input-error {
+        font-size: 11px;
+        color: #df4442;
+        margin-top: 25px;
+        position: absolute;
+        left: 0;
+    }
+    .popup.is-active .popup-container {
+        min-height: 100%;
+        -webkit-transform: translateX(0%);
+        transform: translateX(0%);
+    }
     .basket-popup-button .basket-popup-button-content {
         position: fixed;
         margin-left: 0px;
@@ -7070,18 +7104,18 @@ display:none;
     .popup-close {
         font-size: 15px;
         position: absolute;
-        top: 10%;
-        left: 85%;
+        top: 68px;
+        left: 83%;
         margin-top: -30px;
-        margin-left: -80px;
-        padding: 20px 28px;
+        margin-left: 0%;
+        padding: 0;
         box-sizing: border-box;
         text-align: left;
-        width: 220px;
-        height: 60px;
-        /* border: 1px solid #252525; */
+        width: 22px;
+        height: 22px;
+        border: none;
         -webkit-transform: rotate(-90deg);
-        transform: rotate(-90deg);
+        transform: rotate(0deg);
         /* font-family: DINPro, Arial, sans-serif; */
         /* font-weight: bold; */
         /* font-style: normal; */
@@ -7090,8 +7124,11 @@ display:none;
         /* color: #252525; */
         /* text-transform: uppercase; */
         /* cursor: pointer; */
-        background: url(./images/popup-close.svg) no-repeat 157px 12px;
+        /* background: url(../images/close.png) no-repeat 157px 12px; */
         background-size: 30px 30px;
+        z-index: 1000;
+        position: absolute;
+        background: url(../images/close.png) no-repeat 100% 0;
     }
     .checkbox span {
         position: relative;
@@ -7176,6 +7213,16 @@ display:none;
         text-align: right;
         margin-top: 5px;
         padding-right: 15px;
+        float: right;
+        font-family: DINPro, Arial, sans-serif;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        font-size: 24px;
+        color: #64b357;
+        text-align: right;
+        margin-top: 3px;
+        margin-right: 0px;
     }
     .basket-item__value:nth-child(3) {
         text-align: left;
@@ -7184,20 +7231,20 @@ display:none;
     .basket-item__count {
         height: 20px !important;
         line-height: 20px !important;
-        width: 25px !important;
+        width: 30px !important;
         text-align: center !important;
     }
     input[type="text"], input[type="password"], input[type="email"], input[type="search"], input[type="tel"] {
-        font-size: 11px;
+        font-size: 12px;
     }
     .basket-item__value:last-child {
         float: right;
         font-family: DINPro, Arial, sans-serif;
-        font-weight: bold;
+        font-weight: 300;
         font-style: normal;
         font-stretch: normal;
-        font-size: 24px;
-        color: #64b357;
+        font-size: 15px;
+        color: #252525;
         text-align: right;
         margin-top: 3px;
         margin-right: 0px;
@@ -7569,13 +7616,13 @@ display:none;
 
     .popup-container {
         position: relative;
-        border-bottom: 1px solid #252525;
+        /*border-bottom: 1px solid #252525;*/
         border-top: 0;
         border-right: 0;
         border-left: 0;
         margin: 0;
         background-color: white;
-        padding: 30px 30px 30px 15px;
+        padding: 30px 40px 30px 0px;
         text-align: right;
         will-change: transform;
     }
@@ -7610,12 +7657,16 @@ display:none;
         padding-top: 5px;
     }
 
+
     .padding_top_15 {
         padding-top: 15px;
     }
-
+    .padding_top_22 {
+        padding-top: 22px;
+    }
     .basket-item__image {
         height: auto;
+        text-align: left;
     }
 
     .margin_top_8 {
@@ -7714,7 +7765,10 @@ display:none;
         bottom: 40px;
         left: 15px;
         right: 0;
-        width: 115px;
+        width: calc(100% - 30px);
+        width: -moz-calc(100% - 30px);
+        width: -webkit-calc(100% - 30px);
+        width: -webkit-calc(100% - 30px);
         border-bottom: solid 1px #252525;
         border-right: solid 1px #252525;
         border-left: solid 1px #252525;
@@ -7814,5 +7868,9 @@ display:none;
 
 .bl_chose_days_c .bl_chose_days_btn {
     padding-left: 0;
+}
+
+.idea-advantages__item img {
+    opacity: 0.3;
 }
 
