--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -1642,7 +1642,7 @@ input[type="tel"] {
     width: -webkit-calc(50% + 120px);
     height: auto;
     position: absolute;
-    right: 0;
+    left: 0;
 }
 .carousel-inner {
     position: relative;
@@ -1672,7 +1672,7 @@ input[type="tel"] {
     font-stretch: normal;
     line-height: 1.62;
     color: #878787;
-    margin-top: 30px;
+    margin-top: 15px;
 }
 .carousel_background1 {
     width: calc(50% + 265px);
@@ -1969,7 +1969,7 @@ display: none;
     color: #878787;
 }
 .popup-content h2 {
-    margin-bottom: 58px;
+    margin-bottom: 30px;
     font-size: 27px;
     color: #252525;
 }
@@ -1999,7 +1999,7 @@ display: none;
     height: 1px;
     background-color: #000000;
     /* border: solid 1px #252525; */
-    margin-top: 32px;
+    margin-top: 40px;
 }
 .cross_one {
     content: '';
@@ -3019,6 +3019,9 @@ input[type="tel"] {
 }
 
 @media (min-width: 992px) {
+    .basket-item__image img {
+        height: 80%;
+    }
     .img_card_1 {
         height: 612px;
         width: 380px;
@@ -4177,6 +4180,9 @@ margin-bottom: 263.5px;
 
 }
 @media (min-width: 1200px) {
+    .basket-item__image img {
+        height: 100%;
+    }
     .img_card_1 {
         height: 612px;
         width: 380px;
@@ -5322,6 +5328,9 @@ margin-bottom: 340px;
 }
 
 @media (min-width: 1340px) {
+    .basket-item__image img {
+        height: 80%;
+    }
     .img_card_1 {
         height: 612px;
         width: 380px;
@@ -6555,6 +6564,40 @@ margin-left: -10px;}
 }
 
 @media (max-width: 766px) {
+
+    .popup-container.popup-container-right {
+        border: none;
+        border-right: none;
+        margin-top: 0;
+        margin-left: 0;
+        text-align: left;
+        -webkit-transform: translateX(100%);
+        transform: translateX(100%);
+        padding-left: 30px;
+    }
+    .carousel-indicators li {
+        display: inline-block;
+        width: 12px;
+        height: 12px;
+        text-indent: -999px;
+        border: 1px solid #000000;
+        /* border-radius: 10px; */
+        cursor: pointer;
+        background-color: #000 \9;
+        background-color: #fff;
+    }
+    .carousel-indicators {
+        position: absolute;
+        padding-top: 95px;
+        /* left: 50%; */
+        /* z-index: 15; */
+        width: 50%;
+        margin-left: -30px;
+        /* padding-left: 0; */
+        list-style: none;
+        /* text-align: center; */
+        z-index: 125;
+    }
     input[type="text"], input[type="password"], input[type="email"], input[type="search"], input[type="number"], input[type="tel"] {
         border: none;
         border-bottom: 1px solid #252525;
