--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -2220,7 +2220,7 @@ display: none;
 }
 .main-unit-2 {
     max-width: 702px;
-    margin-left: 32px;
+    margin-left: -5px;
 }
 .page-content__video iframe {
     width: 647px;
@@ -2589,7 +2589,7 @@ input[type="tel"] {
     z-index: 120;
 }
 .container2 {
-    width: 637px;
+    width: 650px;
     height: 90px;
     margin-right: auto;
     margin-left: auto;
@@ -2672,7 +2672,7 @@ input[type="tel"] {
 }
 .bl_catalog_filter_right {
     float: right;
-    width: 319px;
+    width: 299px;
     border-left: 1px solid #d4d4d4;
     height: 90px;
     padding-top: 30px;
@@ -2682,7 +2682,7 @@ input[type="tel"] {
     margin-right: -16px;
 }
 .bl_catalog_filter_left {
-    margin: 0 0px 0 45px;
+    margin: 0 0px 0 0px;
     padding-top: 40px;
     position: absolute;
 }
@@ -3019,6 +3019,12 @@ input[type="tel"] {
 }
 
 @media (min-width: 992px) {
+    input[type="text"], input[type="password"], input[type="email"], input[type="search"], input[type="number"], input[type="tel"] {
+        font-size: 12px;
+    }
+    .basket-item__count {
+        width: 30px !important;
+    }
     .basket-item__image img {
         height: 80%;
     }
@@ -3330,7 +3336,7 @@ input[type="tel"] {
     }
     .main-unit-2 {
         max-width: 952px;
-    margin-left: 2px;
+    margin-left: -25px;
     }
     .page-content__video iframe {
         width: 902px;
@@ -3723,7 +3729,7 @@ input[type="tel"] {
    }
    
    .container2 {
-       width: 850px;
+       width: 865px;
         height: 90px;
         margin-right: auto;
         margin-left: auto;
@@ -3806,7 +3812,7 @@ margin-left: -19px;}
   
   .bl_catalog_filter_right {
     float: right;
-    width: 412px;
+    width: 400px;
     border-left: 1px solid #d4d4d4;
     height: 90px;
     padding-top: 30px;
@@ -3816,7 +3822,7 @@ margin-left: -19px;}
     margin-right: -16px;
 }
 .bl_catalog_filter_left {
-    margin: 0 0px 0 34px;
+    margin: 0 0px 0 -5px;
     padding-top: 40px;
     position: absolute;
 }
@@ -4180,6 +4186,12 @@ margin-bottom: 263.5px;
 
 }
 @media (min-width: 1200px) {
+    input[type="text"], input[type="password"], input[type="email"], input[type="search"], input[type="number"], input[type="tel"] {
+        font-size: 15px;
+    }
+    .basket-item__count {
+        width: 50px !important;
+    }
     .basket-item__image img {
         height: 100%;
     }
@@ -5328,6 +5340,12 @@ margin-bottom: 340px;
 }
 
 @media (min-width: 1340px) {
+    input[type="text"], input[type="password"], input[type="email"], input[type="search"], input[type="number"], input[type="tel"] {
+        font-size: 15px;
+    }
+    .basket-item__count {
+        width: 50px !important;
+    }
     .basket-item__image img {
         height: 80%;
     }
@@ -5948,7 +5966,7 @@ margin-left: -10px;}
     }
     
     .bl_catalog_filter_left {
-    margin: 0 0px 0 93px;
+    margin: 0 0px 0 65px;
     padding-top: 40px;
     position: absolute;
     }
@@ -6060,7 +6078,7 @@ margin-left: -10px;}
     cursor: pointer;
 }
 .line_one {
-    width: 635px;
+    width: 590px;
     height: 1px;
     background-color: #000000;
     /* border: solid 1px #252525; */
@@ -6071,7 +6089,7 @@ margin-left: -10px;}
     content: '';
     margin-top: -8px;
     /* float: right; */
-    margin-left: 635px;
+    margin-left: 590px;
     /* margin-left: -1px; */
     width: 12px;
     height: 19px;
