--- a/local/templates/main/template_styles.css
+++ b/local/templates/main/template_styles.css
@@ -8697,3 +8697,40 @@ a.button, a.button-white {
     color: #b36457;
   }
 }
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    .basket-item__value:nth-child(3) {
+        padding: 0;
+    }
+}
+@media (min-width: 767px) and (max-width: 991px) {
+    .basket-item__value:nth-child(4) {
+        margin-top: 20px;
+    }
+    .basket-popup-button {
+        background: #fff;
+        position: fixed;
+        top: 50%;
+        left: 0;
+        margin-top: -110px;
+        /* margin-left: -80px; */
+        padding: 20px 22px;
+        box-sizing: border-box;
+        text-align: center;
+        width: 50px;
+        height: 220px;
+        border-right: 1px solid #252525;
+        border-top: 1px solid #252525;
+        border-bottom: 1px solid #252525;
+        font-family: DINPro, Arial, sans-serif;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        font-weight: 300;
+        color: #252525;
+        text-transform: uppercase;
+        cursor: pointer;
+        z-index: 1000;
+    }
+}
+
