Fix close button callback mobile.

--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -7171,8 +7171,9 @@ display:none;
         font-size: 15px;
         position: absolute;
         top: 68px;
-        left: 83%;
-        margin-top: -30px;
+        left: 83% !important;
+        text-indent: -99999px;
+        margin-top: -32px;
         margin-left: 0%;
         padding: 0;
         box-sizing: border-box;
